# adaptive-compute-fabric

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  flake.nix
device/: cuda_profiler.cu  cuda_profiler.hpp  nsight_profiler.cpp  nsight_profiler.hpp
include/: benchmark_comparator.hpp  benchmark_history.hpp  benchmark_runner.hpp  console_reporter.hpp  csv_exporter.hpp  cuda_check.hpp  history_loader.hpp  json_exporter.hpp  kernel_analysis.hpp  kernel_classifier.hpp  kernel_explainer.hpp  kernel_ir.hpp  kernel_optimizer.hpp  kernel_report.hpp  kernel_state.hpp  kernel_workflow.hpp  nsight_capture.hpp  profiler_result.hpp
kernels/: reduction.cu  reduction.hpp  vector_add.cu  vector_add.hpp
src/: benchmark_comparator.cpp  benchmark_history.cpp  benchmark_runner.cpp  console_reporter.cpp  csv_exporter.cpp  history_loader.cpp  json_exporter.cpp  kernel_classifier.cpp  kernel_explainer.cpp  kernel_ir.cpp  kernel_optimizer.cpp  kernel_state.cpp  kernel_workflow.cpp  main.cpp  nsight_capture.cpp
temp/: compute_backend.hpp  cpu_backend.hpp  cuda_backend.cu  cuda_backend.hpp  profiler.hpp  sycl_backend.hpp
